[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dyn-fmt = "0.4.0"
local-ip-address = "0.5.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ws = "0.9.2"
